<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="baghi.naeem.com.assignment6.activities.SignUpActivity"
    tools:showIn="@layout/activity_sign_up"
    >
    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/sign_up_title"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_up"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

            <LinearLayout
                android:layout_below="@+id/sign_up_title"
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <EditText
                    android:inputType="text"
                    android:layout_width="0dip"
                    android:height="60dp"
                    android:layout_weight="0.5"
                    android:id="@+id/sign_up_first_name"
                    android:hint="@string/first_name"
                    android:layout_height="60dp" />

                <EditText
                    android:inputType="text"
                    android:layout_width="0dip"
                    android:height="60dp"
                    android:layout_weight="0.5"
                    android:id="@+id/sign_up_last_name"
                    android:hint="@string/last_name"
                    android:layout_height="60dp" />
            </LinearLayout>

            <EditText
                android:inputType="phone"
                android:id="@+id/sign_up_mobile"
                android:layout_below="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/mobile_number"/>

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/sign_up_email"
                android:layout_below="@+id/sign_up_mobile"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"/>

            <EditText
                android:inputType="text"
                android:id="@+id/sign_up_username"
                android:layout_below="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/username"/>

            <EditText
                android:id="@+id/sign_up_password"
                android:inputType="textPassword"
                android:layout_below="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"/>

            <EditText
                android:id="@+id/sign_up_confirm_password"
                android:inputType="textPassword"
                android:layout_below="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/confirm_password"/>

            <Spinner
                android:id="@+id/sign_up_language"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/sign_up_confirm_password"
                android:entries="@array/languages"
                />

            <TextView
                android:id="@+id/sign_up_gender"
                android:layout_centerHorizontal="true"
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@+id/sign_up_language"
                android:textSize="20sp"/>

            <RadioGroup
                android:id="@+id/sign_up_radio_group"
                android:layout_below="@+id/sign_up_gender"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    />
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="true"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/send_confirmation_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_confirmation_to"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/sign_up_radio_group"
                android:textSize="20sp"/>

            <CheckBox
                android:layout_centerHorizontal="true"
                android:id="@+id/sign_up_email_checkbox"
                android:text="@string/email"
                android:layout_below="@id/send_confirmation_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                />

            <CheckBox
                android:layout_centerHorizontal="true"
                android:id="@+id/sign_up_sms_checkbox"
                android:text="@string/sms"
                android:layout_below="@id/sign_up_email_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:text="@string/done"
        android:id="@+id/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:layout_width="200dp"/>
</RelativeLayout>