<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="baghi.naeem.com.assignment4.MainActivity">


    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_width="200dp"
                android:layout_height="200dp" />

            <TextView
                android:id="@+id/app_name"
                android:layout_below="@+id/logo"
                android:text="@string/app_name"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="text"
                android:hint="@string/username"
                android:layout_marginTop="15dp"
                android:id="@+id/login_username"
                android:layout_below="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <EditText
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_marginTop="15dp"
                android:id="@+id/login_password"
                android:layout_below="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <Button
                android:layout_marginTop="15dp"
                android:layout_below="@+id/login_password"
                android:layout_centerHorizontal="true"
                android:id="@+id/login_button"
                android:text="@string/login"
                android:layout_width="200dp"
                android:layout_height="60dp" />

            <Button
                android:layout_marginBottom="15dp"
                android:layout_below="@+id/login_button"
                android:text="@string/sign_up"
                android:id="@+id/login_sign_up"
                android:layout_centerHorizontal="true"
                android:layout_width="200dp"
                android:layout_height="60dp" />

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
