<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="baghi.naeem.com.assignment6.activities.HotelReservationActivity">

    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/reservation_hotel_name"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/reservation_hotel_image"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_width="300dp"
                    android:layout_height="300dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    android:layout_width="300dp"
                    android:layout_height="150dp">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="50dp">
                            <TextView
                                android:layout_centerVertical="true"
                                android:text="@string/check_in"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="50dp">
                            <TextView
                                android:layout_centerVertical="true"
                                android:text="@string/check_out"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="50dp">
                            <TextView
                                android:layout_centerVertical="true"
                                android:text="@string/count"
                                android:labelFor="@id/reservation_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </RelativeLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/check_in_layout"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/check_in_day"
                                android:focusable="false"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content" />
                            <EditText
                                android:id="@+id/check_in_month"
                                android:focusable="false"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content" />
                            <EditText
                                android:id="@+id/check_in_year"
                                android:focusable="false"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/check_out_layout"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/check_out_day"
                                android:focusable="false"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content" />
                            <EditText
                                android:id="@+id/check_out_month"
                                android:focusable="false"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content" />
                            <EditText
                                android:id="@+id/check_out_year"
                                android:focusable="false"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="300dp"
                            android:orientation="horizontal"
                            android:layout_height="50dp">
                            <EditText
                                android:id="@+id/reservation_count"
                                android:inputType="text"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content" />
                            <Spinner
                                android:id="@+id/reservation_room_type_spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:entries="@array/reservation_room_types"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_reserve_button"
        android:text="@string/reserve"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
